--- a/scenes.yaml
+++ b/scenes.yaml
@@ -108,10 +108,21 @@
   name: bedroom_bright
   entities:
     light.bedroom_spot:
-      brightness: 254
+      brightness: 255
       color_temp: 454
       friendly_name: bedroom_spot
       is_deconz_group: false
+      max_mireds: 65535
+      min_mireds: 153
+      state: 'on'
+      supported_features: 43
+    light.bedroom_nightstands:
+      brightness: 255
+      color_temp: 65535
+      entity_id:
+      - light.bedroom_nightstand_1
+      - light.bedroom_nightstand_2
+      friendly_name: bedroom_nightstands
       max_mireds: 65535
       min_mireds: 153
       state: 'on'
@@ -310,7 +321,7 @@
   name: bedroom_nightstands_bright
   entities:
     light.bedroom_nightstands:
-      brightness: 79
+      brightness: 50
       color_temp: 65535
       entity_id:
       - light.bedroom_nightstand_1
