--- a/scripts.yaml
+++ b/scripts.yaml
@@ -18,6 +18,7 @@ notify_mobile:
       data:
         push:
           sound: joi.wav
+
 turn_on_heating:
   alias: Turn the heating on for a given climate
   fields:
@@ -29,6 +30,7 @@ turn_on_heating:
     data_template:
       entity_id: '{{ climate }}'
       temperature: '{{ states(''input_number.heating_on'') | float }}'
+
 turn_off_heating:
   alias: Turn the heating off for a given climate
   fields:
@@ -40,11 +42,22 @@ turn_off_heating:
     data_template:
       entity_id: '{{ climate }}'
       temperature: '{{ states(''input_number.heating_standby'') | float }}'
+
 downstairs_cosy:
   alias: downstairs_cosy
   sequence:
   - scene: scene.downstairs_cosy
   - service: input_boolean.turn_off
-    data: {}
     entity_id: input_boolean.kitchen_motion_on
-  mode: single
+  - service: media_player.volume_set
+    entity_id: media_player.living
+    data:
+      volume_level: 0.07
+  - service: media_player.select_source
+    entity_id: media_player.living
+    data:
+      source: Home Alternative
+  - service: media_player.shuffle_set
+    entity_id: media_player.living
+    data:
+      shuffle: true
