--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,3 +14,4 @@ asuswrt: !include asuswrt.yaml
 webostv: !include webostv.yaml
 google: !include google.yaml
 google_assistant: !include google_home.yaml
+homekit: !include homekit.yaml
