--- a/scripts.yaml
+++ b/scripts.yaml
@@ -112,3 +112,23 @@ clean_kitchen_aisle:
       entity_id: vacuum.portia
       zone: [[23500,29400,24500,28400], [22500,30000,28800,29400]]
       repeats: 1
+
+turn_everything_off:
+  alias: Turn everything off
+  sequence:
+  - service: light.turn_off
+    entity_id: all
+  - service: script.turn_off_heating
+    data:
+      climate: climate.homekit_radiator_living
+  - service: script.turn_off_heating
+    data:
+      climate: climate.homekit_radiator_kitchen
+  - service: script.turn_off_heating
+    data:
+      climate: climate.homekit_radiator_bathroom
+  - service: script.turn_off_heating
+    data:
+      climate: climate.homekit_radiator_bedroom
+  - service: input_boolean.turn_on
+    entity_id: input_boolean.kitchen_motion_on
