--- a/automations/sensors/entry.yaml
+++ b/automations/sensors/entry.yaml
@@ -25,8 +25,8 @@
     entity_id: input_boolean.do_not_disturb
     state: 'off'
   - condition: state
-    entity_id: sun.sun
-    state: 'below_horizon'
+    entity_id: binary_sensor.night
+    state: 'on'
   action:
   - service: scene.turn_on
     entity_id: scene.entry_dim
@@ -43,8 +43,8 @@
     entity_id: input_boolean.do_not_disturb
     state: 'off'
   - condition: state
-    entity_id: sun.sun
-    state: 'above_horizon'
+    entity_id: binary_sensor.night
+    state: 'off'
   action:
   - service: light.turn_off
     entity_id: light.entry
