--- a/binary_sensors.yaml
+++ b/binary_sensors.yaml
@@ -1,2 +1,8 @@
 - platform: workday
   country: BE
+
+- platform: tod
+  name: Night
+  after: sunset
+  after_offset: '-00:15:00'
+  before: '07:00'
