--- a/automations/litterbox.yaml
+++ b/automations/litterbox.yaml
@@ -7,7 +7,7 @@
   - service: input_number.increment
     entity_id: input_number.litterbox_visits
 
-- alias: Litterbox needs cleaning
+- alias: Litterbox Needs Cleaning
   trigger:
   - platform: state
     entity_id: switch.litterbox_needs_cleaning
@@ -21,7 +21,7 @@
       message: "🐈 De kattenbak is vuil"
       sound: "meow.wav"
 
-- alias: Litterbox no longer needs cleaning
+- alias: Litterbox No Longer Needs Cleaning
   trigger:
   - platform: state
     entity_id: switch.litterbox_needs_cleaning
