--- a/automations/mailbox.yaml
+++ b/automations/mailbox.yaml
@@ -11,7 +11,7 @@
   - service: input_boolean.turn_on
     entity_id: input_boolean.mailbox_mail
 
-- alias: There is mail
+- alias: There is Mail
   trigger:
   - platform: state
     entity_id: input_boolean.mailbox_mail
@@ -25,7 +25,7 @@
       message: "📬 Er is post"
       sound: "new-mail.caf"
 
-- alias: Mail has been collected
+- alias: Mail Has Been Collected
   trigger:
   - platform: state
     entity_id: input_boolean.mailbox_mail
