--- a/scenes.yaml
+++ b/scenes.yaml
@@ -503,3 +503,46 @@
       friendly_name: Eiland
       supported_features: 47
       state: 'on'
+- id: '1609158274332'
+  name: living_cosy
+  entities:
+    light.living_floor:
+      min_mireds: 153
+      max_mireds: 454
+      brightness: 128
+      color_temp: 454
+      is_deconz_group: false
+      friendly_name: Staanlamp
+      icon: mdi:floor-lamp
+      supported_features: 43
+      state: 'on'
+    light.living_spot_1:
+      min_mireds: 140
+      max_mireds: 650
+      brightness: 128
+      color_temp: 454
+      is_deconz_group: false
+      friendly_name: living_spot_1
+      supported_features: 43
+      state: 'on'
+    light.living_spot_2:
+      min_mireds: 140
+      max_mireds: 650
+      brightness: 128
+      color_temp: 454
+      is_deconz_group: false
+      friendly_name: living_spot_2
+      supported_features: 43
+      state: 'on'
+    light.living_wall_1:
+      brightness: 64
+      is_deconz_group: false
+      friendly_name: living_wall_1
+      supported_features: 41
+      state: 'on'
+    light.living_wall_2:
+      brightness: 64
+      is_deconz_group: false
+      friendly_name: living_wall_2
+      supported_features: 41
+      state: 'on'
